# react-native-lmdb

./: .clang-format  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  react-native-lmdb.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/lmdb/: LmdbModule.java  LmdbPackage.java
cpp/: lmdb++.h  react-native-lmdb.cpp  react-native-lmdb.h  util.cpp  util.hpp
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/lmdbexample/: ReactNativeFlipper.java
example/android/app/src/main/java/com/lmdbexample/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/android/app/src/release/java/com/lmdbexample/: ReactNativeFlipper.java
example/ios/: File.swift  Podfile
example/ios/LmdbExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/LmdbExample.xcodeproj/: project.pbxproj
example/ios/LmdbExample.xcodeproj/xcshareddata/xcschemes/: LmdbExample.xcscheme
example/ios/LmdbExample.xcworkspace/: contents.xcworkspacedata
example/ios/LmdbExampleTests/: LmdbExampleTests.m
example/src/: App.tsx
ios/: Lmdb.h  Lmdb.mm
src/: index.tsx
